# ESP32_Remout_panel

ESP32-S_COR-ID/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
ESP32-S_COR-ID/main/: CMakeLists.txt  ads1115_reader.c  ads1115_reader.h  dns_server.c  dns_server.h  i2c_peripheral.c  i2c_peripheral.h  main.c  rgb_led.c  rgb_led.h  web_server.c  web_server.h
ESP32-S_COR-ID/main/web_content/: main.html
